[project]
name = "langgraph-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langmem>=0.0.30",
    "numpy>=2.4.1",
    "python-dotenv>=1.2.1",
]
